[gd_scene load_steps=5 format=3 uid="uid://brvexuddln6bj"]

[ext_resource type="Script" path="res://scenes/MainMenu/menu.gd" id="1_6xrdc"]
[ext_resource type="FontFile" uid="uid://bkbhtbio65dg5" path="res://PUBLIC/GrapeSoda.ttf" id="2_ygrgo"]
[ext_resource type="Script" path="res://scenes/MainMenu/start_button.gd" id="3_2d5iw"]
[ext_resource type="PackedScene" uid="uid://c6s72svsllb5m" path="res://scenes/AudioScenes/MusicMenuScene.tscn" id="8_6ftaq"]

[node name="Main Menu Node" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xrdc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -302.0
offset_top = 14.0
offset_right = 298.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 72
text = "NotGonnaHappen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -43.0
offset_right = 211.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../MultiplayerButton")
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 32
text = "New Game"
flat = true
script = ExtResource("3_2d5iw")

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 32
text = "Multiplayer"
flat = true

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 32
text = "Settings"
flat = true

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 32
text = "Exit"
flat = true

[node name="AudioStreamPlayer" parent="." instance=ExtResource("8_6ftaq")]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
